--- a/requirements.txt
+++ b/requirements.txt
@@ -83,3 +83,127 @@ webencodings==0.5.1
 Werkzeug==1.0.1
 wrapt==1.12.1
 zipp==3.1.0
+absl-py==0.9.0
+appdirs==1.4.4
+astunparse==1.6.3
+atpublic==1.0
+attrs==19.3.0
+backcall==0.2.0
+black==19.10b0
+bleach==3.1.5
+cachetools==4.1.1
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+colorama==0.4.3
+configobj==5.0.6
+decorator==4.4.2
+defusedxml==0.6.0
+distro==1.5.0
+dpath==2.0.1
+dvc==1.1.11
+entrypoints==0.3
+flake8==3.8.3
+flatten-json==0.1.7
+flufl.lock==3.2
+funcy==1.14
+future==0.18.2
+gast==0.3.3
+gitdb==4.0.5
+GitPython==3.1.7
+google-auth==1.19.2
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grandalf==0.6
+grpcio==1.30.0
+h5py==2.10.0
+idna==2.10
+importlib-metadata==1.7.0
+ipykernel==5.3.3
+ipython==7.16.1
+ipython-genutils==0.2.0
+jedi==0.17.2
+Jinja2==2.11.2
+joblib==0.16.0
+json5==0.9.5
+jsonpath-ng==1.5.1
+jsonschema==3.2.0
+jupyter-client==6.1.6
+jupyter-core==4.6.3
+jupyterlab==2.2.0
+jupyterlab-server==1.2.0
+Keras-Preprocessing==1.1.2
+lxml==4.5.2
+Markdown==3.2.2
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mistune==0.8.4
+nanotime==0.5.2
+nbconvert==5.6.1
+nbformat==5.0.7
+networkx==2.4
+notebook==6.0.3
+numpy==1.19.0
+oauthlib==3.1.0
+opt-einsum==3.2.1
+packaging==20.4
+pandas==1.0.5
+pandocfilters==1.4.2
+parso==0.7.0
+pathspec==0.8.0
+pexpect==4.8.0
+pickleshare==0.7.5
+ply==3.11
+prometheus-client==0.8.0
+prompt-toolkit==3.0.5
+protobuf==3.12.2
+ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.6.0
+pydot==1.4.1
+pyflakes==2.2.0
+Pygments==2.6.1
+pygtrie==2.3.2
+pyparsing==2.4.7
+pyrsistent==0.16.0
+python-dateutil==2.8.1
+pytz==2020.1
+PyYAML==5.3.1
+pyzmq==19.0.1
+regex==2020.7.14
+requests==2.24.0
+requests-oauthlib==1.3.0
+rsa==4.6
+ruamel.yaml==0.16.10
+ruamel.yaml.clib==0.2.0
+scikit-learn==0.23.1
+scipy==1.5.1
+Send2Trash==1.5.0
+shortuuid==1.0.1
+shtab==1.1.0
+six==1.15.0
+smmap==3.0.4
+spektral==0.6.0
+tabulate==0.8.7
+tensorboard==2.2.2
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.2.0
+tensorflow-estimator==2.2.0
+termcolor==1.1.0
+terminado==0.8.3
+testpath==0.4.4
+threadpoolctl==2.1.0
+toml==0.10.1
+tornado==6.0.4
+tqdm==4.48.0
+traitlets==4.3.3
+typed-ast==1.4.1
+urllib3==1.25.9
+voluptuous==0.11.7
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.1
+wrapt==1.12.1
+zc.lockfile==2.0
+zipp==3.1.0
